--- a/notebooks/project_planning_EDA & stats.ipynb
+++ b/notebooks/project_planning_EDA & stats.ipynb
@@ -2714,7 +2714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "117aa6f5",
    "metadata": {},
    "outputs": [
@@ -2741,15 +2741,16 @@
    ],
    "source": [
     "top_makes = df.groupby('make')['TotalClaims'].mean().sort_values(ascending=False).head(10)\n",
-    "top_makes.plot(kind='bar', title='Top 10 Vehicle Makes by Avg Total Claims')\n"
+    "top_makes.plot(kind='bar', title='Top 10 Vehicle Makes by Avg Total Claims') \n",
+    "\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (heart_disease_env)",
+   "display_name": "Python (Stock_Market_Prediction  )",
    "language": "python",
-   "name": "heart_disease_env"
+   "name": "stock_market_prediction"
   },
   "language_info": {
    "codemirror_mode": {
