--- a/notebooks/project_planning_EDA & stats.ipynb
+++ b/notebooks/project_planning_EDA & stats.ipynb
@@ -2741,8 +2741,7 @@
    ],
    "source": [
     "top_makes = df.groupby('make')['TotalClaims'].mean().sort_values(ascending=False).head(10)\n",
-    "top_makes.plot(kind='bar', title='Top 10 Vehicle Makes by Avg Total Claims') \n",
-    "\n"
+    "top_makes.plot(kind='bar', title='Top 10 Vehicle Makes by Avg Total Claims') "
    ]
   }
  ],
